--- a/supabase/functions/deno.json
+++ b/supabase/functions/deno.json
@@ -10,7 +10,8 @@
   "imports": {
     "std/": "https://deno.land/std@0.168.0/",
     "shared/": "./_shared/",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2"
+    "@supabase/supabase-js": "jsr:@supabase/supabase-js@2",
+    "@supabase/functions-js": "jsr:@supabase/functions-js@2"
   },
   "unstable": ["kv", "cron"]
 }
