--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "date-fns": "^3.6.0",
     "docx": "^9.5.1",
     "dompurify": "^3.3.1",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.18.2",
@@ -60,6 +61,7 @@
     "next-themes": "^0.3.0",
     "pdf-parse": "^2.4.5",
     "pdfjs-dist": "^4.4.168",
+    "pg": "^8.17.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -79,6 +81,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "@types/lodash": "^4.17.23",
     "@types/node": "^22.16.5",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
